[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/amon_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://images/tick.png" type="Texture" id=2]
[ext_resource path="res://images/stop.png" type="Texture" id=3]
[ext_resource path="res://images/fight.png" type="Texture" id=4]
[ext_resource path="res://scenes/pages/adventure/scenes/going_to_line.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.05946
margin_top = 1.05946
margin_right = 101.059
margin_bottom = 41.0595
rect_min_size = Vector2( 100, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="my_button" type="Button" parent="MarginContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="combat" type="Sprite" parent="MarginContainer"]
visible = false
position = Vector2( 9.80003, 10.0649 )
scale = Vector2( 0.015, 0.015 )
texture = ExtResource( 4 )

[node name="end" type="Sprite" parent="MarginContainer"]
visible = false
position = Vector2( 9.80003, 28.0758 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 3 )

[node name="already_visited" type="Sprite" parent="MarginContainer"]
visible = false
position = Vector2( 94.8219, 6.88651 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[connection signal="pressed" from="MarginContainer/my_button" to="." method="_on_Button_pressed"]
